<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, skeletonActivity!</string>
    <string name="app_name">ojoVoz</string>
    <string name="omLocationStr">Posición no disponible</string>

    <color name="omTextColor">#FFFFFF</color>

    <string name="omPhotoButtonText">Tomar una foto</string>
    <string name="omSoundButtonText">Grabar voz</string>
    <string name="omSoundStr"></string>
    <string name="omSaveButtonText">Guardar mensaje</string>

    <drawable name="omBlank">#000000</drawable>

    <string name="omOKButtonText">Si</string>
    <string name="omCancelButtonText">No</string>
    <string name="omDialogTitle">Escribe tu nombre</string>
    <string name="omTextFieldLabel">Nombre:</string>
    <string name="omDefineServerTitle">Definir servidor</string>
    <string name="omServerLabel">Servidor:</string>
    <string name="omDefineIdTitle">Definir identificador</string>
    <string name="omIdLabel">Identificador</string>
    <string name="omVideoButtonText">Toma un video</string>
    <string name="hello_world">Hola mundo!</string>
    <string name="menu_settings">Configuración</string>
    <string name="title_activity_video_capture">Captura video</string>

</resources>
