<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

   
     <Button
        android:id="@+id/omVideoButton"
        android:layout_width="279dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:onClick="showVideo"
        android:text="@string/omVideoButtonText"
        android:textSize="20dp" />
    <TextView
        android:id="@+id/textLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/omLocationStr"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/omTextColor" />

    <Button
        android:id="@+id/omPhotoButton"
        android:layout_width="279dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:onClick="showCamera"
        android:text="@string/omPhotoButtonText"
        android:textSize="20dp" />

    <ImageView
        android:id="@+id/omThumb"
        android:layout_width="267dp"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.47"
        android:src="@drawable/omBlank" />

    <Button
        android:id="@+id/omVoiceButton"
        android:layout_width="279dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:onClick="showRecorder"
        android:text="@string/omSoundButtonText"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/textSoundRecorded"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/omSoundStr"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/omTextColor" />

    <Spinner
        android:id="@+id/omTags"
        android:layout_width="279dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:drawSelectorOnTop="true"
        android:gravity="center_horizontal" />

    <EditText
        android:id="@+id/omNewTag"
        android:layout_width="279dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal" 
        android:singleLine="true"
        android:visibility="invisible">

     
    </EditText>

    <Button
        android:id="@+id/omSaveButton"
        android:layout_width="279dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:onClick="saveMessage"
        android:text="@string/omSaveButtonText"
        android:textSize="20dp"
        android:visibility="invisible" />

</LinearLayout>